@@ -1,3 +1,7 @@
+2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* CamelliaTransform.cs, CamelliaTransformLE.cs: CBCモード用処理を削除
+
 2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* CamelliaManaged.cs: 実装タイプの初期値を設定
